--- a/Examples/Cross_Validation_using_survcompare.Rmd
+++ b/Examples/Cross_Validation_using_survcompare.Rmd
@@ -1,10 +1,8 @@
 ---
-title: "Cross_Validation_using_survcompare"
-output: rmarkdown::html_vignette
-vignette: >
-  %\VignetteIndexEntry{Cross_Validation_using_survcompare}
-  %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+title: "Model Validation and Cross Validation using survcompare"
+author: "Diana Shamsutdinova"
+date: "2023-11-13"
+output: html_document
 ---
 
 ```{r, include = FALSE}
@@ -25,6 +23,7 @@ However, as the package uses Cox Proportionate Hazards and Survival Random Fores
 ### 1. Fitting, cross-validating, and predicting event probabilities using `survcompare` functionality for CoxPH and CoxLasso
 
 ```{r coxph_cv}
+devtools::install_github("dianashams/survcompare",build_vignettes = TRUE)
 library(survcompare)
 # We will use the GBSG data from survival package. 
 # Prepare the data for 'survcompare':
@@ -64,9 +63,9 @@ coxcv <- survcox_cv(mygbsg, myfactors, predict_time)
 summary(coxcv)
 
 # Comments on the results: 
-# wide confidence intervals show that the data is rather heterogenious, 
+# wide confidence intervals show that the data is rather heterogeneous, 
 # that is, quality of predictions differs substantially depending on 
-# which random subsample was chosen as the training data
+# which random sub sample was chosen as the training data
 # e.g. AUCROC can be anywhere from 0.62 to 0.92.
 # 
 # This illustrates that one should perform a repeated CV and acknowledge
@@ -122,7 +121,7 @@ Note, that the function `survsrf_train()` does not just fit a default SRF versio
 
 There are more hyperparameters in the underlying `randomForestSRC::rfsrc()` function, however, these are the ones that tend to affect prediction accuracy the most. See also <https://CRAN.R-project.org/package=randomForestSRC>.
 
-The tuning values for mtry, nodesize and nodedepth depend on the data size and total number of predictors. One can check the tuning grid and the final optimised parameters by running: 
+The tuning values for mtry, nodesize and nodedepth depend on the data size and total number of predictors. One can check the tuning grid and the final optimized parameters by running: 
 ```{r, srf_tuning_params}
 # Tuning grid:
 print(srfmodel1$tuning)
