--- a/vignettes/survcompare_application.Rmd
+++ b/vignettes/survcompare_application.Rmd
@@ -91,11 +91,13 @@ The first example takes simulated data that does not contain any complex terms, 
 mydata <- simulate_linear()
 mypredictors <- names(mydata)[1:4]
 
-compare_models <- survcompare(mydata, mypredictors)
-summary(compare_models)
+#cross-validate CoxPH
+cv1 <- survcox_cv(mydata, mypredictors, randomseed = 100)
+# cross-validate Survival Random Forests ensemble
+cv2 <- survsrfens_cv(mydata, mypredictors, randomseed = 100)
+# compare the models 
+survcompare2(cv1, cv2)
 
-# Other objects in the output object
-names(compare_models)
 ```
 
 ### Example 2. Non-linear data with interaction terms
@@ -107,21 +109,26 @@ The second example takes simulated data that contains non-linear and cross-terms
 mydata2 <- simulate_crossterms()
 mypredictors2 <- names(mydata)[1:4]
 
-compare_models2 <- survcompare(mydata2,mypredictors2)
-summary(compare_models2)
+#cross-validate CoxPH
+cv1 <- survcox_cv(mydata2, mypredictors2, randomseed = 100)
+# cross-validate Survival Random Forests ensemble
+cv2 <- survsrfens_cv(mydata2, mypredictors2, randomseed = 100)
+# compare the models 
+compare_nonl <- survcompare2(cv1, cv2)
+compare_nonl
 ```
 
 Detailed results can be extracted from the output object. For example, test performance for each data split (across all cross-validations and repetitions).
 
 ```{r}
 # Test performance of the ensemble:
-print(round(compare_models2$test$SRF_ensemble,4))
+print(round(cv1$test_pooled,4))
 
 # Mean test performance of the Cox-PH and SRF ensemble:
-print(round(compare_models2$results_mean,4))
+print(round(cv2$test_pooled,4))
 
 # Main stats 
- round(compare_models2$main_stats,4)
+round(compare_nonl$main_stats_pooled,4)
 
 ```
 
@@ -142,47 +149,43 @@ mygbsg <- mygbsg[c("time", "event", myfactors)]
 sum(is.na(mygbsg[myfactors])) #check if any missing data
 
 # run survcompare 
-survcompare(mygbsg, myfactors, randomseed = 42, repeat_cv = 5)
-
-# [1] "Cross-validating Cox PH model using 5 repeat(s), 3 outer, 3 inner loops)"
-#   |===============================================================| 100%
-# Time difference of 1.142473 secs
-# [1] "Cross-validating CoxPH and SRF Ensemble using 5 repeat(s), 3 outer, 3 inner loops)"
-#   |===============================================================| 100%
-# Time difference of 49.34405 secs
-# 
-# Internally validated test performance of CoxPH     and Survival Random Forest ensemble:
-#                   T C_score AUCROC      BS BS_scaled Calib_slope
-# CoxPH        4.1797  0.6751 0.7203  0.2182    0.1489      1.2529
-# SRF_Ensemble 4.1797  0.6938 0.7279  0.2162    0.1567      1.3961
-# Diff         0.0000  0.0187 0.0076 -0.0020    0.0078      0.1432
-# pvalue          NaN  0.0000 0.0744  0.4534    0.0919      0.0229
-#              Calib_alpha   sec
-# CoxPH             0.4193  1.14
-# SRF_Ensemble      0.4186 49.34
-# Diff             -0.0007 48.20
-# pvalue            0.5410   NaN
+cv1<- survcox_cv(mygbsg, myfactors, randomseed = 42, repeat_cv = 5)
+cv2<- survsrfens_cv(mygbsg, myfactors, randomseed = 42, repeat_cv = 5)
+  
+survcompare2(cv1, cv2)
 
 ```
 
 We got the following results (depending on a random seed, it may slightly differ):
 
 ```
-Survival Random Forest ensemble has outperformed CoxPH    by 0.0187 in C-index. The difference is statistically significant with the p-value 1.347e-05***. The supplied data may contain non-linear or cross-term dependencies, better captured by the Survival Random Forest.
+Internally validated test performance of CoxPH and SRF_ensemble over 5 repeated 3 fold cross-validations (inner k = 3 ). Mean performance:
+               T C_score  AUCROC Calib_slope   sec
+CoxPH        4.2  0.6751  0.7203      0.8614  1.47
+SRF_ensemble 4.2  0.6890  0.7177      1.5925 52.88
+Diff         0.0  0.0140 -0.0025      0.7311 51.41
+pvalue       NaN  0.0014  0.6610      0.0000   NaN
 
-C-score: 
-  
-  CoxPH      0.6751(95CI=0.6417-0.7137;SD=0.0231)
-  
-  SRF_Ensemble 0.6938(95CI=0.6596-0.7346;SD=0.0212)
+Median performance:
+               T C_score  AUCROC Calib_slope   sec
+CoxPH        4.2  0.6701  0.7198      0.7889  1.47
+SRF_ensemble 4.2  0.6900  0.7149      1.6513 52.88
+Diff         0.0  0.0198 -0.0049      0.8625 51.41
+pvalue       NaN  0.0014  0.6610      0.0000   NaN
 
-AUCROC:
-  
-  CoxPH      0.7203(95CI=0.6693-0.7708;SD=0.0356)
-  
-  SRF_Ensemble 0.7279(95CI=0.6797-0.7781;SD=0.0311)
- 
- See other items as x$item. Items available: results_mean, results_mean_train, return_models, test, train, difftest, main_stats, randomseed, useCoxLasso
+SRF_ensemble has outperformed CoxPHby 0.014 in C-index.
+The difference is statistically significant with the p-value 0.0014**.
+The supplied data may contain non-linear or cross-term dependencies, 
+better captured by SRF_ensemble.
+Mean C-score: 
+  CoxPH  0.6751(95CI=0.6608-0.6837;SD=0.0095)
+  SRF_ensemble 0.689(95CI=0.6812-0.6971;SD=0.0064)
+Mean AUCROC:
+  CoxPH  0.7203(95CI=0.7027-0.7333;SD=0.0128)
+SRF_ensemble 0.7177(95CI=0.711-0.7235;SD=0.0052)
+ See other items as x$item. Items available:
+results_mean, results_median, results_mean_train, return_models, bestparams, test, train, difftest, main_stats, main_stats_pooled, randomseed, useCoxLasso, model_name_base, model_name, cv
+
  ```
 
 This example illustrates a situation when outperformance of the non-linear model is statistically significant, but not large in absolute terms. The ultimate model choice will depend on how critical such an improvement is for the model stakeholders.
