--- a/vignettes/survcompare_application.Rmd
+++ b/vignettes/survcompare_application.Rmd
@@ -2,7 +2,7 @@
 title: "Survcompare_application"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{survcompare_application}
+  %\VignetteIndexEntry{Survcompare_application}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -12,8 +12,14 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   rf_user <- rfcores_old <- options()$rf.cores,
-  options(rf.cores = 1)
+  warnings_user<- options()$warn,
+  scipen_user<- options()$scipen,
+  digits_user<- options()$digits,
+  options(rf.cores = 1),
+  options(warn = -1),
+  options(scipen = 100, digits = 4)
 )
+
 ```
 
 ## Package background
@@ -29,7 +35,9 @@ The package checks whether there are considerable non-linear and interaction ter
 
     -   `randomForestSRC::rfsrc()`(Ishwaran & Kogalur, 2023).
 
--   Performs statistical testing of whether the Survival Random Forest ensemble outperforms the Cox model.
+-   Validates stacked ensemble of the CoxPH and Survival Random Forest, which predicts as a linear combination of the CoxPH and SRF, lambda x CoxPH + (1-lambda) x SRF. Lambda parameter is tuned within the package and the value can indicate if taking a share of SRF predictions could improve the baseline CoxPH's performance. Lambda = 0 means only CoxPH is used, lambda = 1 means the model is the same as SRF.
+
+-   Performs statistical testing of whether the Survival Random Forest [ensemble] outperforms the Cox model.
 
 -   It does NOT handle missing data at the moment.
 
@@ -69,7 +77,11 @@ Before interpreting the results, ensure that a sufficient number of repetitions 
 
 ### Why the CoxPH-SRF ensemble and not just SRF?
 
-The ensemble of CoxPH and SRF takes CoxPH's predictions and adds them to the list of predictors to train SRF. This way, we make sure that linearity is captured by the ensembled SRF at least as good as in the CoxPH, and hence its outperformance can be fully attributed to the qualities of SRF that CoxPH does not have, that is, handling data non-linearity.
+First, you can use the package to compare the performances of the CoxPH and SRF, and leave the ensembles out
+(by specifying the survcompare(use_ensemble = FALSE).
+
+However, the ensembles aim to provide a higher degree of generalisability of the results. In 
+The ensemble of CoxPH and SRF takes CoxPH's predictions and adds them to the list of predictors to train SRF. This way, we make sure that linearity is captured by the ensembled SRF at least as good as in the CoxPH, and hence its outperformance can be fully attributed to the qualities of SRF that CoxPH does not have, that is, handling data non-linearity. 
 
 ### Package installation
 
@@ -88,31 +100,36 @@ The first example takes simulated data that does not contain any complex terms, 
 
 ```{r example_simulated_1}
 
-mydata <- simulate_linear()
+mydata <- simulate_linear(200)
 mypredictors <- names(mydata)[1:4]
+survcompare(mydata, mypredictors, randomseed = 100)
 
+```
+
+NOTE: the same results can be obtained by cross-validating CoxPH and SRF Ensemble separately,and then using survcompare2() function; outer_cv, inner_cv, repeat_cv, and randomseed should be the same.
+
+```{r example_simulated_alternative, eval = FALSE}
 #cross-validate CoxPH
-cv1 <- survcox_cv(mydata, mypredictors, randomseed = 100)
-# cross-validate Survival Random Forests ensemble
-cv2 <- survsrfens_cv(mydata, mypredictors, randomseed = 100)
-# compare the models 
-survcompare2(cv1, cv2)
-
+ cv1<- survcox_cv(mydata, mypredictors, randomseed = 100)
+#cross-validate Survival Random Forests ensemble
+ cv2<- survsrfens_cv(mydata, mypredictors, randomseed = 100)
+#compare the models 
+ survcompare2(cv1, cv2)
 ```
 
 ### Example 2. Non-linear data with interaction terms
 
-The second example takes simulated data that contains non-linear and cross-terms, and an outperformance of the tree model is expected. We will increase the default number of cross-validation repetitions to get a robust estimate, and choose CoxLasso as our baseline linear model.
+The second example takes simulated data that contains non-linear and cross-terms, and an outperformance of the tree model is expected. We will increase the default number of cross-validation repetitions to get a robust estimate, choose CoxLasso as our baseline linear model, and SRF as the alternative (not the ensemble).
 
 ```{r example_simulated_2}
 
-mydata2 <- simulate_crossterms()
-mypredictors2 <- names(mydata)[1:4]
+mydata2 <- simulate_crossterms(200)
+mypredictors2 <- names(mydata2)[1:4]
 
 #cross-validate CoxPH
-cv1 <- survcox_cv(mydata2, mypredictors2, randomseed = 100)
+cv1 <- survcox_cv(mydata2, mypredictors2, randomseed = 100, repeat_cv = 3, useCoxLasso = TRUE)
 # cross-validate Survival Random Forests ensemble
-cv2 <- survsrfens_cv(mydata2, mypredictors2, randomseed = 100)
+cv2 <- survsrf_cv(mydata2, mypredictors2, randomseed = 100, repeat_cv = 3)
 # compare the models 
 compare_nonl <- survcompare2(cv1, cv2)
 compare_nonl
@@ -121,16 +138,39 @@ compare_nonl
 Detailed results can be extracted from the output object. For example, test performance for each data split (across all cross-validations and repetitions).
 
 ```{r}
-# Test performance of the ensemble:
-print(round(cv1$test_pooled,4))
-
-# Mean test performance of the Cox-PH and SRF ensemble:
-print(round(cv2$test_pooled,4))
-
 # Main stats 
-round(compare_nonl$main_stats_pooled,4)
+compare_nonl$main_stats_pooled
+
+# More information, including Brier Scores, Calibration slope and alphas can be seen in the
+# compare_models_1$results_mean. These are averaged performance metrics on the test sets.
+compare_nonl$results_mean
 
 ```
+
+We can also evaluate the stacked ensemble of Cox-PH and SRF and see the tuned lambda and SRF model parameters:
+```{r example_simulated_alternative2}
+#cross-validate CoxPH
+cv3<- survsrfstack_cv(mydata2, mypredictors2, randomseed = 100, repeat_cv = 3)
+ 
+survcompare2(cv1, cv3)
+```
+
+Display all tuned model params. Lambda shows relative share of the SRF in the linear meta-learner. 
+Lambda = 0 means that the model only uses CoxPH. Lambda = 1 means that only SRF is used.
+
+```{r example_simulated_alternative3}
+# all tuned params
+cv3$bestparams
+
+lambdas <- unlist(cv3$bestparams$lambda)
+print("Mean lambda in the stacked ensemble of the SRF and CoxPH, indicating the share of SRF predictions in the meta-learner:") 
+print(mean(lambdas))
+
+plot(lambdas)
+abline(h=mean(lambdas), col = "blue")
+
+```
+
 
 ### Example 3. Applying `survcompare` to GBSG data
 
@@ -149,9 +189,8 @@ mygbsg <- mygbsg[c("time", "event", myfactors)]
 sum(is.na(mygbsg[myfactors])) #check if any missing data
 
 # run survcompare 
-cv1<- survcox_cv(mygbsg, myfactors, randomseed = 42, repeat_cv = 5)
-cv2<- survsrfens_cv(mygbsg, myfactors, randomseed = 42, repeat_cv = 5)
-  
+cv1<- survcox_cv(mygbsg, myfactors, randomseed = 42, repeat_cv = 3)
+cv2<- survsrfens_cv(mygbsg, myfactors, randomseed = 42, repeat_cv = 3)
 survcompare2(cv1, cv2)
 
 ```
@@ -159,32 +198,20 @@ survcompare2(cv1, cv2)
 We got the following results (depending on a random seed, it may slightly differ):
 
 ```
-Internally validated test performance of CoxPH and SRF_ensemble over 5 repeated 3 fold cross-validations (inner k = 3 ). Mean performance:
-               T C_score  AUCROC Calib_slope   sec
-CoxPH        4.2  0.6751  0.7203      0.8614  1.47
-SRF_ensemble 4.2  0.6890  0.7177      1.5925 52.88
-Diff         0.0  0.0140 -0.0025      0.7311 51.41
-pvalue       NaN  0.0014  0.6610      0.0000   NaN
+Internally validated test performance of CoxPH and SRF_ensemble over 3 repeated 3 fold cross-validations (inner k = 3 ). Mean performance:
 
 Median performance:
-               T C_score  AUCROC Calib_slope   sec
-CoxPH        4.2  0.6701  0.7198      0.7889  1.47
-SRF_ensemble 4.2  0.6900  0.7149      1.6513 52.88
-Diff         0.0  0.0198 -0.0049      0.8625 51.41
-pvalue       NaN  0.0014  0.6610      0.0000   NaN
 
-SRF_ensemble has outperformed CoxPHby 0.014 in C-index.
-The difference is statistically significant with the p-value 0.0014**.
+SRF_ensemble has outperformed CoxPHby 0.0137 in C-index.
+The difference is statistically significant with the p-value 0.012*.
 The supplied data may contain non-linear or cross-term dependencies, 
 better captured by SRF_ensemble.
 Mean C-score: 
-  CoxPH  0.6751(95CI=0.6608-0.6837;SD=0.0095)
-  SRF_ensemble 0.689(95CI=0.6812-0.6971;SD=0.0064)
+  CoxPH  0.6773(95CI=0.675-0.6801;SD=0.0028)
+  SRF_ensemble 0.6911(95CI=0.6902-0.6918;SD=9e-04)
 Mean AUCROC:
-  CoxPH  0.7203(95CI=0.7027-0.7333;SD=0.0128)
-SRF_ensemble 0.7177(95CI=0.711-0.7235;SD=0.0052)
- See other items as x$item. Items available:
-results_mean, results_median, results_mean_train, return_models, bestparams, test, train, difftest, main_stats, main_stats_pooled, randomseed, useCoxLasso, model_name_base, model_name, cv
+  CoxPH  0.7224(95CI=0.7176-0.728;SD=0.0055)
+SRF_ensemble 0.7211(95CI=0.7177-0.7241;SD=0.0034)
 
  ```
 
@@ -193,5 +220,8 @@ This example illustrates a situation when outperformance of the non-linear model
 ```{r, include = FALSE}
 # reinstating the value for rf.cores back to default/user-defined value
 options(rf.cores = rfcores_old)
+options(warn = warnings_user)
+options(digits = digits_user)
+options(scipen = scipen_user)
 
 ```
