--- a/vignettes/survcompare_application.Rmd
+++ b/vignettes/survcompare_application.Rmd
@@ -77,11 +77,11 @@ Before interpreting the results, ensure that a sufficient number of repetitions 
 
 ### Why the CoxPH-SRF ensemble and not just SRF?
 
-First, you can use the package to compare the performances of the CoxPH and SRF, and leave the ensembles out
-(by specifying the survcompare(use_ensemble = FALSE).
+First, you can use the package to compare the performances of the CoxPH and SRF themselves.
 
-However, the ensembles aim to provide a higher degree of generalisability of the results. In 
-The ensemble of CoxPH and SRF takes CoxPH's predictions and adds them to the list of predictors to train SRF. This way, we make sure that linearity is captured by the ensembled SRF at least as good as in the CoxPH, and hence its outperformance can be fully attributed to the qualities of SRF that CoxPH does not have, that is, handling data non-linearity. 
+Second, the ensembles aim to single out the predictive value of the non-linearity and other data relationships that could not be captured by the baseline models. In both ensembles, the final models has a direct access to the predictions of the baseline CoxPH, and hence, the outperformance can be fully attributed to such complex relationships.
+
+For example, the sequential ensemble of Cox and SRF takes the predictions of the Cox model and adds to the list of predictors to train SRF. This way, we make sure that linearity is captured by SRF at least as good as in the Cox model, and hence the marginal outperformance of the ensemble over the Cox model can be fully attributed to the qualities of SRF that Cox does not have, that is, data complexity.
 
 ### Package installation
 
